1，成功使用了ant；2，webpack配置成功；3，兼容性正常；

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
+    "babel-polyfill": "^6.26.0",
     "eslint": "^4.5.0",
     "eslint-config-umi": "^0.1.1",
     "eslint-plugin-flowtype": "^2.34.1",
