--- a/package.json
+++ b/package.json
@@ -1,29 +1,45 @@
 {
-  "private": true,
+  "name": "fistdemo",
+  "version": "1.0.0",
+  "description": "first demo ----",
+  "main": "index.js",
   "scripts": {
-    "start": "roadhog server",
-    "build": "roadhog build",
-    "lint": "eslint --ext .js src test",
-    "precommit": "npm run lint"
+    "test": "echo test",
+    "devser": "webpack-dev-server --config webpack.dev.config.js --color",
+    "build": "webpack --config webpack.prud.config.js"
   },
+  "keywords": [
+    "first"
+  ],
+  "author": "rcc",
+  "license": "ISC",
   "dependencies": {
-    "antd": "^3.6.1",
-    "babel-plugin-import": "^1.7.0",
-    "dva": "^2.3.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "antd": "^3.6.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.8.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "html-loader": "^0.5.5",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "url-loader": "^1.0.1"
   },
   "devDependencies": {
-    "babel-plugin-dva-hmr": "^0.3.2",
+    "babel-plugin-import": "^1.8.0",
     "babel-polyfill": "^6.26.0",
-    "eslint": "^4.5.0",
-    "eslint-config-umi": "^0.1.1",
-    "eslint-plugin-flowtype": "^2.34.1",
-    "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0",
-    "husky": "^0.12.0",
-    "redbox-react": "^1.4.3",
-    "roadhog": "^2.0.0"
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.6",
+    "webpack-dev-server": "^3.1.4"
   }
 }
