--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "author": "rcc",
   "license": "ISC",
+  "primary-color": "#0000ff",
   "dependencies": {
     "antd": "^3.6.3",
     "babel-core": "^6.26.3",
