--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.11",
+    "echarts": "^4.1.0",
     "html-loader": "^0.5.5",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
@@ -39,6 +40,7 @@
     "babel-polyfill": "^6.26.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.6.2",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6",
     "webpack-dev-server": "^3.1.4"
