--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "style-loader": "^0.21.0",
     "url-loader": "^1.0.1"
   },
   "devDependencies": {
