--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-websocket": "^2.0.0",
     "redux": "^4.0.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1"
