--- a/package.json
+++ b/package.json
@@ -38,8 +38,15 @@
     "url-loader": "^1.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "babel-plugin-import": "^1.8.0",
     "babel-polyfill": "^6.26.0",
+    "eslint": "^5.2.0",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-react": "^7.10.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.6.2",
