--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-react": "^7.10.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.6.2",
     "webpack": "^4.12.0",
